# auto-reply

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  allowlist.example.yaml  facts.example.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
nas/: README.md  compose.yaml  crontab.example
nas/systemd/: auto-reply.service  auto-reply.timer
src/autoreply/: db.py  facts.py  generation.py
src/autoreply/gmail/: auth.py  bridge.py  drafts.py  filter.py  inbox.py  reconcile.py
src/autoreply/pipeline/: build_pairs.py  cleaning.py  mbox.py
src/autoreply/training/: __init__.py  compare.py  export_gguf.py  formatting.py  split.py  train_lora.py
tests/: test_build_pairs.py  test_cleaning.py  test_db.py  test_export_gguf.py  test_facts.py  test_filter.py  test_formatting.py  test_inbox.py  test_pairing.py  test_prompt_pinning.py  test_reconcile.py  test_remote_generation.py  test_signature.py  test_split.py
